[tool.poetry]
name = "hot-tub"
version = "0.1.0"
description = ""
authors = ["Dolan, Jarlath <jarlath.dolan@intel.com>"]
readme = "README.md"
packages = [{include = "hot_tub", from = "src"}]

[tool.poetry.dependencies]
python = "~3.11"
pyinstaller = "^5.9.0"
pyqt5 = "^5.15.9"
pandas = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
